# StrassenAlgotrithm

./: .gitignore  CMakeLists.txt
inc/: arrayClass.hh  matrix.hh
src/: arrayClass.cpp  main.cpp  matrix.cpp
